fixed username and italic overlaps

--- a/src/components/flow/Cell/styles.module.scss
+++ b/src/components/flow/Cell/styles.module.scss
@@ -327,7 +327,6 @@
   overflow: hidden;
   box-sizing: border-box;
   position: relative;
-  font-size: 6px;
 
   &::after {
     content: ' ';
